Full comments. Frontend improvement